# SproSim

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  run_demo.sh  run_tests.sh
demo/: demo_3d.cpp  demo_realistic.cpp  main.cpp
examples/: basic_simulation.cpp  custom_transport_model.cpp
include/sprosim/: CoffeeBed.h  CoffeeParticle.h  CoffeeParticle3D.h  Parameters.h  PhysicsSolver.h  SimulationManager.h  WaterFlow.h
include/sprosim/interfaces/: ICoffeeBed.h  IFlow.h  IFlowModel.h  IParticle.h  IPermeabilityModel.h  ITransportModel.h
include/sprosim/models/flow/: DarcyFlowModel.h
include/sprosim/models/permeability/: ConstantPermeabilityModel.h  KozenyCarmanPermeabilityModel.h
include/sprosim/models/transport/: LinearExtractionModel.h
src/: CoffeeBed.cpp  CoffeeParticle.cpp  CoffeeParticle3D.cpp  PhysicsSolver.cpp  SimulationManager.cpp  WaterFlow.cpp
src/models/transport/: LinearExtractionModel.cpp
tests/: CMakeLists.txt
tests/flow/: test_DarcyFlowModel.cpp
tests/mocks/: MockCoffeeParticle.h  MockWaterFlow.h
tests/permeability/: test_ConstantPermeabilityModel.cpp  test_KozenyCarmanPermeabilityModel.cpp
tests/physics/: CoffeeParticle3DTests.cpp  PhysicsSolverTests.cpp
tests/simulation/: test_SimulationManager.cpp
tests/transport/: test_LinearExtractionModel.cpp
visualization/: CMakeLists.txt  README.md
visualization/paraview/examples/: README.md
visualization/paraview/exporters/: VTKExporter.cpp  VTKExporter.h
visualization/paraview/scripts/: visualize_espresso.py
visualization/paraview/states/: espresso_basic.pvsm
visualization/web/: README.md
